tests/ui/discord-frontend/command_macro/command_macro_expected_literal_6.stderr
error: expected literal
  --> tests/ui/discord-frontend/command_macro/command_macro_expected_literal_6.rs:34:12
   |
LL |     name = core
   |            ^^^^

error: aborting due to 1 previous error

